--- a/site/src/views/admin/categories/editCategorie.ejs
+++ b/site/src/views/admin/categories/editCategorie.ejs
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- HEAD-->
-<%- include("../partials/head.ejs") %>
+<%- include("../adminHead.ejs") %>
 
     <body>
         <!-- dashboard admin -->
-        <%- include("../partials/dashboard.ejs") %>
+        
 
             <div class="admin-content">
-                <%- include("../partials/header.ejs") %>
+                <%- include("../adminHeader.ejs") %>
 
                     <main>
                         <h1>Editar categoria</h1>
