--- a/site/src/views/admin/adminHeader.ejs
+++ b/site/src/views/admin/adminHeader.ejs
@@ -4,6 +4,7 @@
         <ul>
             <li class="admin-li"><a href="/admin/products">Productos</a></li>
             <li class="admin-li"><a href="/admin/categories">Categorias</a></li>
+            <li class="admin-li"><a href="/admin/users">Usuarios</a></li>
             <li class="admin-li"><a href="http://localhost:3000">Tienda</a></li>
         </ul>
     </nav>
