--- a/site/src/views/admin/categories/addCategorie.ejs
+++ b/site/src/views/admin/categories/addCategorie.ejs
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- HEAD-->
-<%- include("../partials/head.ejs") %>
+<%- include("../adminHead.ejs") %>
 
     <body>
-        <!-- dashboard admin -->
-        <%- include("../partials/dashboard.ejs") %>
+        
 
             <div class="admin-content">
-                <%- include("../partials/header.ejs") %>
+                <%- include("../adminHeader.ejs") %>
                     <main>
                         <h1>Agregar categoria</h1>
                         <form action="/admin/categories/create" method="POST">
