--- a/site/public/css/password.css
+++ b/site/public/css/password.css
@@ -20,7 +20,7 @@
         150deg
         ,#0e0d0d, #d4af37, rgb(59, 47, 49));
     animation: BgGradient 5s ease infinite;
-    margin-top: 20px;
+    margin: 20px 0;
 }
 .button--positionEnviar{
      width: 39%;
