--- a/site/src/views/partials/footer.ejs
+++ b/site/src/views/partials/footer.ejs
@@ -11,7 +11,7 @@
             <div class="lower">
                 <div class="topic">Contactanos</div>
                 <div class="phone">
-                    <a href="#"><i class="fas fa-phone-volume"></i>+54 11xxxxxxx</a>
+                    <a href="https://wa.me/541154761428?text=Hola%20necesito%20información" target="_blank"><i class="fas fa-phone-volume"></i>+54 11xxxxxxx</a>
                 </div>
                 <div class="email">
                     <a href="mailto:mimperiosuscrip@gmail.com"><i class="fas fa-envelope"></i>mimperiosuscrip@gmail.com</a>
@@ -33,9 +33,9 @@
         </div>
         <div class="right box">
             <div class="topic">Te encantan nuestras ofertas? Suscribite</div>
-            <form action="https://formsubmit.co/mimperiosuscrip@gmail.com" method="POST">   
+            <form action="https://formsubmit.co/mimperiosuscrip@gmail.com" method="POST" target="_blank">   
                      
-                <input type="email" name="email" placeholder="Ingresa tu mail" required>
+                <input type="email" name="email" placeholder="Ingresa tu mail">
                 <input type="submit" name="" value="Suscribir">
                 <div class="media-icons">
                     <a href="https://www.facebook.com/aquimuebles" target="_blank"><i class="fab fa-facebook-f"></i></a>
