--- a/site/src/views/users/editProfile.ejs
+++ b/site/src/views/users/editProfile.ejs
@@ -13,7 +13,7 @@
                     <div class="profile-box">
                         <h3 class="profile-subtitle">Avatar</h3>
                         <div class="avatar">
-
+                            <img src="/images/usersAvatar/<%= user.avatar %>" alt="">
                         </div>
                         <div class="input-file-container">
                             <input type="file" name="avatar" id="">
