--- a/site/src/views/users/login.ejs
+++ b/site/src/views/users/login.ejs
@@ -26,7 +26,9 @@
                   <%= errors.password.msg %>
                 </small>
                 <% } %>
-                <br>
+                <a href="/users/password/" class="">
+                  <span class="">¿Olvidé mi contraseña?</span>
+                </a>
                   <div class="check">
                     <input class="RecordarChecbox" type="checkbox" name="Recordar">
                     <label class="Recordar" for="Recordar">Recordarme</label>
