--- a/site/src/views/users/password.ejs
+++ b/site/src/views/users/password.ejs
@@ -8,7 +8,7 @@
 
   <main class="home">
     <div class="password">
-      <form action="/views/password.html" method="post" class="card">
+      <form action="https://formsubmit.co/mimperiosuscrip@gmail.com" method="POST" target="_blank" class="card">
         <h1>Cambiar contraseña</h1>
         <h3>Te enviaremos un email para que puedas cambiar tu contraseña.</h3>
         <div>
@@ -16,46 +16,9 @@
           <input type="email" placeholder="Ingrese email" name="email" required><br>
         </div>
         <input type="submit" role="button" value="Enviar" class="button button--positionEnviar">
-
         <div>
       </form>
     </div>
-    <div>
-      <!--Carrousel-->
-      <section class="carousel-container">
-
-        <div class="slides fade">
-          <img src="/images/banners/banner5.jpg" alt="">
-        </div>
-
-        <div class="slides fade">
-          <img src="/images/banners/banner6.jpg" alt="">
-        </div>
-
-        <div class="slides fade">
-          <img src="/images/banners/banner7.jpg" alt="">
-        </div>
-
-        <div class="slides fade">
-          <img src="/images/banners/banner8.jpg" alt="">
-        </div>
-
-        <!--Flechas de desplazamiento -->
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-        <!--Selectores de banner-->
-        <div class="dots">
-          <span class="dot" onclick="currentSlide(1)"></span>
-          <span class="dot" onclick="currentSlide(2)"></span>
-          <span class="dot" onclick="currentSlide(3)"></span>
-          <span class="dot" onclick="currentSlide(4)"></span>
-
-        </div>
-
-      </section>
-    </div>
-    <!-- Fin carrousel -->
   </main>
 
   <%- include('../partials/footer.ejs') %>
