--- a/site/public/css/general.css
+++ b/site/public/css/general.css
@@ -18,6 +18,8 @@
 @import url('sliderofer.css');
 @import url('cards.css');
 @import url('contacto.css');
+@import url('modalWindow.css');
+@import url('botonSubir.css');
 
 
 .dark-mode-button{
@@ -70,9 +72,9 @@ html.dark-mode .logofooter{
     font-size: 13px;
 }
 
-.comoenvios{
-    margin-top: 10px;
-    margin-bottom: 10px;
+
+@media screen and (min-width: 768px) {
+    .comoenvios{
+        margin: 5% 15%;
+    }
 }
-
-
