--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -79,9 +79,11 @@
     </div>
 
     <!-- Buscador escritorio -->
-    <form action="/search" method="GET" id="search">
-      <input class="search" type="search" name="keywords" placeholder="Buscar productos, marcas y más" />
-      <button type="submit" class="btn-search"><i class="fas fa-search"></i></button>
+    <form action="/search" method="GET" id="search" class="search-form-desktop">
+      <div class="search-bar">
+        <input class="search" type="search" name="keywords" placeholder="Buscar productos, marcas y más" />
+        <button type="submit" class="btn-search"><i class="fas fa-search"></i></button>
+      </div>
     </form>
 
     <div class="user-icons-desktop">
