cambios boton dark mode

--- a/site/public/css/general.css
+++ b/site/public/css/general.css
@@ -27,8 +27,9 @@
     left: 20px;
     padding: 1px;
     border-radius: 10px;
-    background: white;
-    border: solid black 3px;
+    background: black;
+    border: solid goldenrod 3px;
+    color: white;
 }
 
 html.dark-mode{
