--- a/site/src/views/partials/footer.ejs
+++ b/site/src/views/partials/footer.ejs
@@ -11,7 +11,7 @@
             <div class="lower">
                 <div class="topic">Contactanos</div>
                 <div class="phone">
-                    <a href="https://wa.me/541154761428?text=Hola%20necesito%20información" target="_blank"><i class="fas fa-phone-volume"></i>+54 11xxxxxxx</a>
+                    <a href="https://wa.me/543813842068?text=Hola%20necesito%20información" target="_blank"><i class="fas fa-phone-volume"></i>Nuestro whatsapp</a>
                 </div>
                 <div class="email">
                     <a href="mailto:mimperiosuscrip@gmail.com"><i class="fas fa-envelope"></i>mimperiosuscrip@gmail.com</a>
