--- a/site/public/css/home.css
+++ b/site/public/css/home.css
@@ -49,14 +49,24 @@
 }
 button.buttonProductos {
   margin: 15px 0px;
-  width: 100%;
-  font-size: 18px;
+  font-size: 16px;
   background-color: black;
   color: white;
   text-align: center;
   cursor: pointer;
+  padding: 10px;
+  border-radius: 5px;
 }
 
+.button-all-products-container {
+  display: flex;
+  justify-content: center;
+}
+
+button.buttonProductos:hover {
+  background-color: goldenrod;
+  transition: 0.6s ease;
+}
 
 .button:hover {
   background-color: #555;
