--- a/site/public/css/register.css
+++ b/site/public/css/register.css
@@ -85,3 +85,13 @@
 .register .formulario small {
     color: red;
 }
+
+@media screen and (min-width: 320px) and (max-width: 425px) {
+    .register .card {
+        margin: 50px 20px;
+    }
+
+    .formulario .input-form {
+        width: 80%;
+    }
+}
