--- a/site/src/views/cocina.ejs
+++ b/site/src/views/cocina.ejs
@@ -10,7 +10,7 @@
 
         <div class="main">
           <%- include('partials/cards.ejs') %> 
-              <div>
+              <div class="button-all-products-container">
                 <p> <a href="/productos">
                   <button class="buttonProductos">VER TODOS LOS PRODUCTOS</button>
                   </a>
