--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -2,7 +2,7 @@
   <div class="main-header">
 
     <div class="logo">
-      <a href="http://localhost:3000"><img src="/images/logo/logoimperio.png" alt=""></a>
+      <a href="http://localhost:3000"><img src="/images/logo/imperio.png" alt=""></a>
     </div>
 
     <i class="fas fa-bars burguer-menu-icon" onclick="dropMenu()"></i>
