--- a/site/src/views/results.ejs
+++ b/site/src/views/results.ejs
@@ -18,51 +18,29 @@
 
 							<% if (result.length> 0 ) { %> <% result.forEach(product=> { %>
 									<!--    <a href="/detalleDelProducto/<%- product.id %>"> -->
-									<div id="cardimp">
-										<div class="star" id="btnFav">
-											<figure class="myImage" id="<%- product.id %>">
-											</figure>
+										<div class="cardimp"> 
+											<div class="img-sectionimp">
+												<img src="/images/products/<%- product.images[0]?.image %>" alt="puede contener un gran mueble de Imperio">
+											</div>
+											<div class="descripcionimp">
+												<h2><% if (product.productName.length > 20) { %>
+													<% let productoSlice = product.productName.slice(0,20) %> 
+													  <%= productoSlice %>... 
+												  
+												  <% } else { %>
+													<%- product.productName %>
+													<% } %>
+								</h2>
+												<p>$ <%-product.price - product.price * product.discount / 100 %><b></b>
+													<span id="off"><%- product.discount !== 0 ? `${product.discount}% OFF Antes $ ${product.price} ` : "" %></p>                    
+											</div>
+											<div class="button-group">
+												<a href="/product/detail/<%= product.id %>" class="detalles">Ver detalles</a>
+												<a href="#" class="añadir">Añadir al carrito</a>
+											</div>
+											<br>
+										   
 										</div>
-										<a href="/product/detail/<%= product.id %>">
-											<div class="img-producto">
-												<img src="/images/products/<%- product.images[0]?.image %>"
-													alt="<%- product.productName %>" />
-											</div>
-											
-											<div class="description-product">
-
-												<h4>
-													<% if (product.productName.length> 20) { %>
-														<% let productoSlice=product.productName.slice(0,20) %>
-															<%= productoSlice %>...
-
-																<% } else { %>
-																	<%- product.productName %>
-																		<% } %>
-												</h4>
-												
-												<% if (product.discount !==0) { %>
-													<div class="withDiscount">
-														<small>$<%- toThousand(product.price) %></small>
-														<span>
-															<%- product.discount !==0 ? `${product.discount}% OFF`
-																: '' %>
-														</span>
-													</div>
-													<h3>$<%- toThousand(product.price - product.price *
-															product.discount / 100) %>
-													</h3>
-
-													<% } else { %>
-														<h3>
-															$<%- toThousand(product.price) %>
-													</h3>
-
-														<% } %>
-
-											</div>
-										</a>
-									</div>
 									<!-- </a> -->
 									<% }); %>
 										<% } else { %>
