--- a/site/src/views/admin/users/editUser.ejs
+++ b/site/src/views/admin/users/editUser.ejs
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <!-- HEAD-->
 <%- include("../adminHead.ejs") %>
 
     <body>
-        <!-- dashboard admin -->
 
             <div class="admin-content">
                 <%- include("../adminHeader.ejs") %>
 
                     <main>
                         <h1>Editar usuario #<%= user.id %></h1>
-                        <form action="/admin/users/edit/<%=user.id%>?_method=PUT" method="POST" enctype="multipart/form-data">
+                        <form action="/admin/users/edit/<%=user.id%>?_method=PUT" method="POST">
                             <div class="form caja-agregar">
                                 Nombre:<label for="name"><input readonly class="input style-admin" type="text" name="name"
                                         id="name" placeholder="Nombre" value="<%= locals.old && old.name ? old.name : user.name %>" />
@@ -38,7 +37,7 @@
                                         value="<%= user.street %>" />
                                 </label>
                                 Rol:<label for="rol_id">
-                                    <select class="input style-admin" name="rol_id" id="rol_id">
+                                    <select class="input style-admin" name="rol" id="rol_id">
                                         <% if(session.user.rol==1) { %>
                                             <option value="1" selected>Administrador</option>
                                             <option value="0">Usuario</option>
