--- a/site/src/views/partials/head.ejs
+++ b/site/src/views/partials/head.ejs
@@ -39,6 +39,8 @@
     <script src="/js/header-user.js" defer></script>
     <script src="/js/apiProvincias.js" defer></script>
     <script src="/js/search.js"></script>
+    <script src="/js/botonSubirjs"></script>
+
     
 
     <title>Muebleria Imperio</title>
