--- a/site/src/views/product/productDetail.ejs
+++ b/site/src/views/product/productDetail.ejs
@@ -55,7 +55,7 @@
 
           <div class="purchase-info">
             <input type="number" min="0" id="1">
-            <button type="button" class="btn">
+            <button type="button" class="btn" onclick="addToCart(`<%- product.id %>`, 1,`<%= user %>`)">
               Añadir al carrito <i class="fas fa-shopping-cart"></i>
             </button>
           </div>
