--- a/site/src/views/users/userProfile.ejs
+++ b/site/src/views/users/userProfile.ejs
@@ -38,7 +38,7 @@
                             <div class="input-container">
                                 <div class="input-flex">
                                     <label for="">DNI: </label>
-                                    <p><%= user.dni ? user.dni : "------" %></p>
+                                    <p><%= user.dni ? user.dni : "" %></p>
                                 </div>
                             </div>
                     </div>
@@ -47,25 +47,25 @@
                         <div class="input-container">
                             <div class="input-flex">
                                 <label for="">Teléfono: </label>
-                                <p><%= user.tel ? user.tel : "------" %></p>
+                                <p><%= user.tel ? user.tel : "" %></p>
                             </div>
                         </div>
                         <div class="input-container">
                             <div class="input-flex">
                                 <label for="">Provincia: </label>
-                                <p><%= user.province ? user.province : "------" %> </p>
+                                <p><%= user.province ? user.province : "" %> </p>
                             </div>
                         </div>
                         <div class="input-container">
                             <div class="input-flex">
                                 <label for="">Localidad: </label>
-                                <p><%= user.location ? user.location : "------" %> </p>
+                                <p><%= user.location ? user.location : "" %> </p>
                             </div>
                         </div>
                         <div class="input-container">
                             <div class="input-flex">
                                 <label for="">Dirección: </label>
-                                <p><%= user.street ? user.street : "------" %></p>
+                                <p><%= user.street ? user.street : "" %></p>
                             </div>
                         </div>
                     </div>
