--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -12,7 +12,7 @@
 
       <div class="user-icons-mobile">
         <a href="/users/login"><i class="fas fa-user"></i></a>
-        <a href="/products/cart"><i class="fas fa-shopping-cart"></i></a>
+        <a href="/product/cart"><i class="fas fa-shopping-cart"></i></a>
     </div> 
 
 
@@ -101,7 +101,7 @@
           <a href="/users/login"><i class="fas fa-user"></i></a>
         <% } %>  
       </div>
-      <a href="/product/carrito"><i class="fas fa-shopping-cart"></i></a>
+      <a href="/product/cart"><i class="fas fa-shopping-cart"></i></a>
     </div>
 
 
