--- a/site/src/views/product/carrito.ejs
+++ b/site/src/views/product/carrito.ejs
@@ -2,55 +2,62 @@
 <html lang="es">
 <%- include('../partials/head.ejs') %>
 
-	<body>
-		<%- include('../partials/header.ejs') %>
+  <body>
+    <%- include('../partials/header.ejs') %>
       <h2>Carrito de compras</h2>
-      <% if (products.length === 0) { %>
-        <h2>No hay productos en su carrito</h2>
-      <% } else { %>
-        <div class="small-container cart-page">
-          <table class="cart-container">
-            <tr>
-              <th class="th-cart">Producto</th>
-              <th class="th-cart">Cantidad</th>
-              <th class="th-cart">Subtotal</th>
-            </tr>
-            <tr>
-              <% products.forEach(product => { %>
-              <td>
-                <div class="cart-info">
-                  <img src="/images/products/<%- product.productImages[0].image %>" alt="">
-                  <div>
-                    <p><%= product.productName %></p>
-                    <small><%= product.price %></small>
-                    <br />
-                    <a class="remove-product-cart" href="">Eliminar</a>
-                  </div>
-                </div>
-              </td>
-              <td><input type="number" value="1" /></td>
-              <td>$50</td>
+      <% if( cart.length> 0) { %>
+      <div class="small-container cart-page">
+        <table class="cart-container">
+          <tr>
+            <th class="th-cart">Producto</th>
+            <th class="th-cart">Cantidad</th>
+            <th class="th-cart">Subtotal</th>
+          </tr> 
+            <% let cartPriceTotal = 0 %>
+              <% cart.forEach(product=> { %>
+                <tr>
+                  <td>
+                    <div class="cart-info">
+                      <img src="/images/products/<%- product.products.images[0].image %>" alt="" />
+                      <div>
+                        <p>
+                          <%- product.products.productName %>
+                        </p>
+                        <small> $<%- product.products.price %> </small>
+                        <br>
+                        <form action="/users/deleteProductCart/<%- product.products.id %>?_method=DELETE" method="POST">
+                          <button class="remove-product-cart" type="submit">
+                            Eliminar
+                          </button>
+                        </form>
+                      </div>
+                    </div>
+                  </td>
+                  <td><input type="number" value="1" /></td>
+                  <td>$50</td>
+                </tr>
+              <% }) %>
+        </table>
+
+        <div class="total-price">
+          <div class="button-clean">
+            <button type="button">Vaciar Carito</button>
+          </div>
+          <table>
+            <tr class="td-bold">
+              <td>Total</td>
+              <td>$200</td>
             </tr>
           </table>
-  
-          <div class="total-price">
-            <div class="button-clean">
-              <button type="button">Vaciar Carito</button>
-            </div>
-            <table>
-              <tr class="td-bold">
-                <td>Total</td>
-                <td>$200</td>
-              </tr>
-            </table>
-          </div>
-          <div class="button-confirm">
-            <button type="button">Confirmar compra</button>
-          </div>
         </div>
-      <% }) %>
-
-			<%- include('../partials/footer.ejs') %>
-	</body>
+        <div class="button-confirm">
+          <button type="button">Confirmar compra</button>
+        </div>
+      </div>
+      <% } else { %>
+        <h2 class="no-products">No hay productos en su carrito</h2>
+      <% } %>
+    <%- include('../partials/footer.ejs') %>
+  </body>
 
 </html>
