Cambios en el admin

--- a/site/src/views/admin/adminIndex.ejs
+++ b/site/src/views/admin/adminIndex.ejs
@@ -3,6 +3,7 @@
     <%- include ('../admin/adminHead.ejs') %>
 <body>
     <%- include ('../admin/adminHeader.ejs') %>
-    <h2>Bienvenido Admin</h2>
+    <%- include('partials/adminSidebar') %>
+    <h2>Bienvenid@  <%- user.name %></h2>
 </body>
 </html>
