--- a/site/src/views/admin/adminProducts.ejs
+++ b/site/src/views/admin/adminProducts.ejs
@@ -36,7 +36,7 @@
                         <td><%- product.id%></td>
                         <td><%- product.productName%></td>
                         <td><%- product.description%></td>
-                        <td><%- product.categoryId%></td>
+                        <td><%- product.category.name%></td>
                         <td><%- product.measures%></td>
                         <td><%- product.price%></td>
                         <td><%- product.origin%></td>
