--- a/site/src/views/admin/categories/editCategorie.ejs
+++ b/site/src/views/admin/categories/editCategorie.ejs
@@ -21,6 +21,9 @@
                                 <button type="submit" class="btn-admin style-admin">
                                     EDITAR
                                 </button>
+                                <button class="btn-admin style-admin">
+                                    <a href="/admin/categories" style="text-decoration: none; color: black;">CANCELAR</a>
+                            </button>
                             </div>
                         </form>
                     </main>
