--- a/site/src/views/admin/categories/panelCategories.ejs
+++ b/site/src/views/admin/categories/panelCategories.ejs
@@ -6,7 +6,7 @@
     
     <div class="container-fluid">
       <div class="row">
-       
+        <%- include('../partials/adminSidebar') %>
         <main class="col-md-10 ms-sm-auto">
           <div class="d-flex justify-content-between align-items-center pt-3 pb-2 mb-3 border-bottom">
             <h2>Categorias</h2>
