--- a/site/src/views/admin/partials/adminSidebar.ejs
+++ b/site/src/views/admin/partials/adminSidebar.ejs
@@ -19,6 +19,12 @@
             Categorias
           </a>
         </li>      
+        <li class="nav-item">
+          <a class="nav-link" href="/">
+            <span data-feather="shop"></span>
+            Volver a la tienda
+          </a>
+        </li>      
       </ul>
     </div>
   </nav>
