Actualización del carrito

--- a/site/public/css/adminCreate.css
+++ b/site/public/css/adminCreate.css
@@ -1,7 +1,7 @@
 
 
 main.admin-main {
-    background-image: url('/images/fondoadmin1.jpg');  
+    background-color: #f2f2f2;  
     height: 100%;
     padding: 3rem 1rem;
 }
