--- a/site/public/css/general.css
+++ b/site/public/css/general.css
@@ -19,6 +19,7 @@
 @import url('contacto.css');
 @import url('modalWindow.css');
 @import url('botonSubir.css');
+@import url('success.css');
 
 
 .dark-mode-button{
