--- a/site/public/css/adminEdit.css
+++ b/site/public/css/adminEdit.css
@@ -1,6 +1,6 @@
 
 main.admin-main {
-    background-image: url('/images/fondoadmin1.jpg');
+    background-color: #f2f2f2;
     height: 100%;
     padding: 2rem 1rem;
 }
