--- a/site/public/css/carrito.css
+++ b/site/public/css/carrito.css
@@ -38,6 +38,17 @@ td button.remove-product-cart {
   border-radius: 5px;
   font-size: 9px;
   padding: 2px;
+  cursor: pointer;
+}
+
+td button.detail-product-cart {
+  color: white;
+  background: black;
+  border-style: none;
+  border-radius: 5px;
+  font-size: 9px;
+  padding: 2px;
+  cursor: pointer;
 }
 
 td img {
@@ -85,10 +96,12 @@ tr.td-bold {
 .button-confirm button {
   padding: 10px;
   width: 34%;
+  cursor: pointer;
 }
 
 .button-clean button {
   padding: 5px;
+  cursor: pointer;
 }
 
 h2.no-products {
