--- a/site/src/views/admin/adminProducts.ejs
+++ b/site/src/views/admin/adminProducts.ejs
@@ -23,7 +23,7 @@
                   <th scope="col">id</th>
                   <th scope="col">Nombre</th>
                   <th scope="col">Descripción</th>
-                  <th scope="col">CategoryId</th>
+                  <th scope="col">Categoría</th>
                   <th scope="col">Medidas</th>
                   <th scope="col">Precio</th>
                   <th scope="col">Origen</th>
