--- a/site/src/views/admin/categories/addCategorie.ejs
+++ b/site/src/views/admin/categories/addCategorie.ejs
@@ -19,6 +19,9 @@
                             <button type="submit" class="btn-admin style-admin">
                                 CREAR
                             </button>
+                            <button class="btn-admin style-admin">
+                                <a href="/admin/categories" style="text-decoration: none; color: black;">CANCELAR</a>
+                        </button>
                             </div>
                         </form>
                     </main>
