--- a/site/src/views/product/productDetail.ejs
+++ b/site/src/views/product/productDetail.ejs
@@ -54,7 +54,7 @@
           </div>
 
           <div class="purchase-info">
-            <input type="number" min="0" id="1">
+            <input type="number" min="1" max="1" id="1" value="1">
             <a href="/users/addToCart/<%- products.id %>">
               <button type="button" class="btn">
                 Añadir al carrito <i class="fas fa-shopping-cart"></i>
