--- a/site/public/css/general.css
+++ b/site/public/css/general.css
@@ -17,6 +17,7 @@
 @import url('sliderofer.css');
 @import url('cards.css');
 @import url('contacto.css');
+@import url('comprar.css');
 @import url('modalWindow.css');
 @import url('botonSubir.css');
 @import url('success.css');
