--- a/site/src/views/comprar.ejs
+++ b/site/src/views/comprar.ejs
@@ -5,7 +5,16 @@
     <%- include ('partials/header.ejs') %>
     <main class="comprar">
         <div class="comocomprar">
-            <img src="images/varias/comprar.png" alt="imagen cómo comprar" width="100%">
+            <h1> ¿Cómo hacer tu compra?</h1>
+            <h2>MUEBLERIA IMPERIO</h2>
+            <UL>
+                <li> 1° Elije los muebles que deseas y añadelos al carrito.</li>
+                <li> 2° Luego de seleccionar todos ve al carrito de compras y d click en finalizar compra.</li>
+                <li> 3° Elige tu medio de pago y carga tu dirección de envio.</li>
+                <li> 4° Pagás y luego de procesar tu pago realizamos el envio o preparmos tu pedido para que retires de nuestra sucursal.</li>
+    
+                
+            </UL>
         </div>
 
     </main>
